Add a class-level Scaladoc comment explaining the IntelliJ JVM flag requirement and move the companion object to the end of the file.